# Copyright (C) 2025 Pedro Henrique / phdev13
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "trackiellm_cortex"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Henrique / phdev13"]
license = "Apache-2.0"
description = "The central reasoning and orchestration engine for the TrackieLLM application."
repository = "https://github.com/phkaiser13/trackiellm"
readme = "README.md"
keywords = ["ai", "robotics", "llm", "embedded", "orchestration"]
categories = ["science", "embedded"]

[dependencies]
# --- External Crates ---
# Used for structured logging throughout the application.
log = "0.4"

# Provides ergonomic error handling with the `#[derive(Error)]` macro.
thiserror = "1.0"

# Used for one-time static initialization, particularly for the FFI bridge's global REASONER.
once_cell = "1.19"

# Used for timestamping memories in the memory_manager.
chrono = { version = "0.4", features = ["serde"] }

# Required for FFI interactions with C, such as `libc::free`.
libc = "0.2"


# --- Workspace Crates ---
# Provides the shared FFI type definitions (e.g., tk_error_code_t).
trackie_ffi = { path = "../ffi" }

# Provides shared event and data structures, like `NavigationData`.
trackiellm_event_bus = { path = "../event_bus" }