#
# Copyright (C) 2025 Pedro Henrique / phdev13
#
# File: Cargo.toml
#
# Cargo manifest for the TrackieLLM deployment crate.
# This crate is responsible for packaging, versioning, and updating the application.
#
# SPDX-License-Identifier: AGPL-3.0 license
#

[package]
name = "trackiellm_deployment"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Pedro Henrique / phdev13"]
description = "Handles packaging and updates for TrackieLLM."

[lib]
name = "trackiellm_deployment"
path = "src/lib.rs"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
