# Copyright [2023] [TrackieLLM Contributors]
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "interaction"
version = "0.1.0"
edition = "2021"
authors = ["TrackieLLM Contributors"]
license = "Apache-2.0"
description = "A crate for handling user interaction, including command parsing and feedback management."
repository = "https://github.com/phkaiser13/trackiellm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Dependency for parsing command strings.
# The `command_parser.rs` module relies on `nom` for its core functionality.
nom = "8.0.0"

# Standard logging facade.
# Useful for integrating with the broader logging infrastructure of the project.
log = "0.4"


# Defines the library target for this crate.
[lib]
name = "interaction"
crate-type = ["rlib"]