[package]
name = "trackiellm-logging-ext"
version = "1.0.0"
edition = "2021"
authors = ["Pedro Henrique <phdev13@example.com>"]
description = "Logging extensions module for TrackieLLM - structured formatters and audit helpers"
license = "AGPL-3.0"
repository = "https://github.com/example/trackiellm"

[lib]
name = "trackiellm_logging_ext"
crate-type = ["cdylib", "rlib"]

[dependencies]
# For structured logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For precise timestamps
chrono = { version = "0.4", features = ["serde"] }

# For robust error handling
thiserror = "1.0"

# The standard logging facade
log = "0.4"

# For the FFI global state management
lazy_static = "1.4"

[dev-dependencies]
# For testing log output
slog = "2.7"
slog-term = "2.9"
slog-async = "2.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
