#
# Copyright (C) 2025 Pedro Henrique / phdev13
#
# File: Cargo.toml
#
# Cargo manifest for the TrackieLLM logging extensions crate.
# This crate provides specialized logging functionality, such as audit logging
# and structured event formatting.
#
# SPDX-License-Identifier: AGPL-3.0 license
#

[package]
name = "trackiellm_logging_ext"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Pedro Henrique / phdev13"]
description = "Specialized logging extensions for TrackieLLM."

[lib]
name = "trackiellm_logging_ext"
path = "src/lib.rs"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
