# Copyright (C) 2025 Pedro Henrique / phdev13
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
# The name of the crate.
name = "navigation"

# The version of the crate.
version = "0.1.0"

# The Rust edition to use.
edition = "2021"

# The authors of the crate.
authors = ["Pedro Henrique / phdev13"]

# The license for the crate.
license = "Apache-2.0"

# A short description of the crate's functionality.
description = "Provides spatial analysis, free space detection, and obstacle tracking for robotics applications."

# URL of the repository.
# repository = "https://github.com/phkaiser13/trackiellm"

# Keywords for discoverability on crates.io.
keywords = ["robotics", "navigation", "ffi", "computer-vision", "slam"]

# Categories for classification on crates.io.
categories = ["science::robotics", "external-ffi-bindings"]


[lib]
# This crate is designed to be a C-compatible dynamic library for FFI,
# but we also include 'rlib' to allow it to be used by other Rust crates
# within the same workspace if needed.
crate-type = ["cdylib", "rlib"]


[dependencies]
# This crate currently has no external dependencies. All required functionality
# is provided by the Rust standard library.
#
# Example of how to add a dependency:
# log = "0.4.14"