#
# Copyright (C) 2025 Pedro Henrique / phdev13
#
# File: Cargo.toml
#
# Cargo manifest for the TrackieLLM networking crate.
# This crate handles socket communication, connection pooling, and protocol
# implementations for remote communication.
#
# SPDX-License-Identifier: AGPL-3.0 license
#

[package]
name = "trackiellm_networking"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Pedro Henrique / phdev13"]
description = "Networking and communication protocols for TrackieLLM."

[lib]
name = "trackiellm_networking"
path = "src/lib.rs"

[dependencies]
log = "0.4"
tokio = { version = "1.0", features = ["net", "io-util"] }
bytes = "1.0"
