[package]
name = "trackiellm-profiling"
version = "1.0.0"
edition = "2021"
authors = ["Pedro Henrique <phdev13@example.com>"]
description = "Profiling module for TrackieLLM - in-app performance profiling"
license = "AGPL-3.0"
repository = "https://github.com/example/trackiellm"

[lib]
name = "trackiellm_profiling"
crate-type = ["cdylib", "rlib"]

[dependencies]
# For high-dynamic-range histograms, perfect for latency profiling
hdrhistogram = "7.5"

# A smaller, faster mutex implementation
parking_lot = "0.12"

# For robust error handling
thiserror = "1.0"

# For the FFI global state management
lazy_static = "1.4"

# For serializing the profiling report
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# For testing
criterion = "0.5" # A proper benchmarking harness for testing the profiler's overhead

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
