[package]
# The name of the package.
name = "sensors"

# The version of the package.
version = "0.1.0"

# The Rust edition to use.
edition = "2021"

# The license for the package.
license = "Apache-2.0"

# A brief description of the package.
description = "A library for sensor data processing, filtering, and fusion, with a C-compatible FFI layer."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# This configures the library crate compilation.
# "lib" is the standard Rust library format.
# "staticlib" compiles the code into a static library (.a) that can be linked into other applications.
crate-type = ["lib", "staticlib"]

[dependencies]
log = "0.4.21"
thiserror = "1.0.58"
nalgebra = "0.32.3"